syntax="proto3";

package api;

option go_package="github.com/winglq/l4proxy/src/api";

service ControlService {
  rpc CreateConnection(CreateConnectionRequest) returns (stream CreateConnectionResponse) {}
}

message CreateConnectionRequest {
  string display_name = 1;
  int32 public_port = 2;
  int32 internal_port = 3;
}

message CreateConnectionResponse {
  string name = 1;
  string internal_address = 2;
  string public_address = 3;
}
